--- a/index.html
+++ b/index.html
@@ -7,6 +7,44 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="left">
+            <div class="company">
+                <p>SMABIAN</p>
+            </div>
+        </div>
+        <div class="right">
+            <div class="intro">
+                <p>
+                    This is not a real online service! You know you need something like this in your life to realize your deepest dreams. Sign up <em>now</em> to get started
+                </p>
+                <p>
+                    You <em>know</em> you want to.
+                </p>
+            </div>
+            <div class="formSection">
+                <h1>Let's do this!</h1>
+                <form>
+                    <label for="firstName">First Name</label>
+                    <input type="text" id="firstName">
+                    <label for="lastName">Last Name</label>
+                    <input type="text" id="lastName">
+                    <label for="eMail">e-Mail</label>
+                    <input type="email" id="eMail">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone">
+                    <label for="password1">Password</label>
+                    <input type="password" id="password1">
+                    <label for="password2">Confirm Password</label>
+                    <input type="password" id="password2">
+                    
+                </form>
+            </div>
+            <div class="submitLogin">
+                    <button>Create Account</button>
+                    <p>Already have an account? <a href="">Log In</a></p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
