Add custom font and style left side of form

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="container">
         <div class="left">
             <div class="company">
-                <p>SMABIAN</p>
+                <img id="logo" src="odin-lined.png">
+                <div class="companyName">Smabian</div>
             </div>
         </div>
         <div class="right">
