--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
         </div>
         <div class="right">
             <div class="intro">
-                <p>
-                    This is not a real online service! You know you need something like this in your life to realize your deepest dreams. Sign up <em>now</em> to get started
-                </p>
-                <p>
-                    You <em>know</em> you want to.
-                </p>
+                <p> This is not a real online service! You know you need something like this in your life to realize your deepest dreams. <br>
+                Sign up <em>now</em> to get started.</p>
+                <p>You <em>know</em> you want to.</p>
             </div>
             <div class="formSection">
                 <h1>Let's do this!</h1>
