--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p>You <em>know</em> you want to.</p>
             </div>
             <div class="formSection">
-                <h1>Let's do this!</h1>
+                <p>Let's do this!</p>
                 <form>
                     <label for="firstName">First Name</label>
                     <input type="text" id="firstName">
@@ -40,7 +40,7 @@
             </div>
             <div class="submitLogin">
                     <button>Create Account</button>
-                    <p>Already have an account? <a href="">Log In</a></p>
+                    <p>Already have an account? <a href="">Log in</a></p>
             </div>
         </div>
     </div>
