Add Form Styling and responsive layout change

--- a/index.html
+++ b/index.html
@@ -23,19 +23,30 @@
             <div class="formSection">
                 <p>Let's do this!</p>
                 <form>
-                    <label for="firstName">First Name</label>
-                    <input type="text" id="firstName">
-                    <label for="lastName">Last Name</label>
-                    <input type="text" id="lastName">
-                    <label for="eMail">e-Mail</label>
-                    <input type="email" id="eMail">
-                    <label for="phone">Phone Number</label>
-                    <input type="tel" id="phone">
-                    <label for="password1">Password</label>
-                    <input type="password" id="password1">
-                    <label for="password2">Confirm Password</label>
-                    <input type="password" id="password2">
-                    
+                    <div>
+                        <label for="firstName">FIRST NAME</label>
+                        <input type="text" id="firstName">
+                    </div>
+                    <div>
+                        <label for="lastName">LAST NAME</label>
+                        <input type="text" id="lastName">    
+                    </div>
+                    <div>
+                        <label for="eMail">EMAIL</label>
+                        <input type="email" id="eMail">
+                    </div>
+                    <div>
+                        <label for="phone">PHONE NUMBER</label>
+                        <input type="tel" id="phone">
+                    </div>
+                    <div>
+                        <label for="password1">PASSWORD</label>
+                        <input type="password" id="password1">
+                    </div>
+                    <div>
+                        <label for="password2">CONFIRM PASSWORD</label>
+                        <input type="password" id="password2">
+                    </div>
                 </form>
             </div>
             <div class="submitLogin">
