--- a/index.html
+++ b/index.html
@@ -22,36 +22,36 @@
             </div>
             <div class="formSection">
                 <p>Let's do this!</p>
-                <form>
+                <form action="" method="get">
                     <div>
-                        <label for="firstName">FIRST NAME</label>
-                        <input type="text" id="firstName">
+                        <label for="firstName">FIRST NAME *</label>
+                        <input type="text" id="firstName" name="firstName" required>
                     </div>
                     <div>
-                        <label for="lastName">LAST NAME</label>
-                        <input type="text" id="lastName">    
+                        <label for="lastName">LAST NAME *</label>
+                        <input type="text" id="lastName" name="lastName" required>    
                     </div>
                     <div>
-                        <label for="eMail">EMAIL</label>
-                        <input type="email" id="eMail">
+                        <label for="email">EMAIL *</label>
+                        <input type="email" id="email" name="email" placeholder="your@email.com" required>
                     </div>
                     <div>
                         <label for="phone">PHONE NUMBER</label>
-                        <input type="tel" id="phone">
+                        <input type="tel" id="phone" name="phone">
                     </div>
                     <div>
-                        <label for="password1">PASSWORD</label>
-                        <input type="password" id="password1">
+                        <label for="password1">PASSWORD *</label>
+                        <input type="password" id="password1" name="password1" class="error" required>
                     </div>
                     <div>
-                        <label for="password2">CONFIRM PASSWORD</label>
-                        <input type="password" id="password2">
+                        <label for="password2">CONFIRM PASSWORD *</label>
+                        <input type="password" id="password2" name="password2" class="error" required>
                     </div>
-                </form>
             </div>
             <div class="submitLogin">
-                    <button>Create Account</button>
-                    <p>Already have an account? <a href="">Log in</a></p>
+                <button>Create Account</button>
+                </form>
+                <p>Already have an account? <a href="">Log in</a></p>
             </div>
         </div>
     </div>
