Add error css classes for password validation

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <div>
                         <label for="password1">PASSWORD *</label>
                         <input type="password" id="password1" name="password1" class="error" required>
+                        <p id="passwordErrorText">* Passwords do not match</p>
                     </div>
                     <div>
                         <label for="password2">CONFIRM PASSWORD *</label>
