Add javascript for password validation

--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
                     <div>
                         <label for="password1">PASSWORD *</label>
                         <input type="password" id="password1" name="password1" class="error" required>
-                        <p id="passwordErrorText">* Passwords do not match</p>
                     </div>
                     <div>
                         <label for="password2">CONFIRM PASSWORD *</label>
                         <input type="password" id="password2" name="password2" class="error" required>
+                        <p id="passwordInfo" class="passwordErrorText">* No password set</p>
+
                     </div>
             </div>
             <div class="submitLogin">
@@ -56,5 +57,6 @@
             </div>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
